fix for content overflow
it was flowing all over the show

--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -60,7 +60,7 @@ div.panel .title { padding: 3px; text-align: center; font-weight: bold; }
 div.panel .title a { color: #6a6a6a; }
 div.panel.slides { overflow: hidden; }
 div.panel.slides .slide img { max-height: 50%; margin-left: auto; margin-right: auto; display: block; height: auto; }
-div.panel > div.content { margin: 4px; height: inherit; overflow: hidden; }
+div.panel > div.content { margin: 4px; height: inherit; }
 div.panel > div.content .slide { float: left; }
 div.panel a.move-panel { font-size: 60px; line-height: 17px; cursor: move; height: 28px; overflow: hidden; display: inline-block; position: absolute; top: 0; left: 0; }
 div.panel.ui-resizable .ui-resizable-handle { position: absolute; font-size: 0px; display: block; }
@@ -75,8 +75,9 @@ div.panel.edit { height: 100%; padding: 1px; overflow-x: hidden; overflow-y: aut
 div.panel.edit > div.content { padding-top: 20px; }
 div.panel.edit > div.content label { display: block; clear: both; width: 95%; margin-left: auto; margin-right: auto; }
 div.panel.edit > div.content label select, div.panel.edit > div.content label input { float: right; width: 45%; }
+div.panel.view { overflow: hidden; }
 div.panel .clock { margin-left: auto; margin-right: auto; text-align: center; }
-div.panel.tPanel > div.content[contentEditable=true]:empty:before { content: 'Your text here'; font-style: italic; }
+div.panel.textPanel > div.content[contentEditable=true]:empty:before { content: 'Your text here'; font-style: italic; }
 div.panel.statusPanel .status { text-align: center; font-size: 60px; }
 div.panel.statusPanel.ok .status:after { content: '\25B2'; color: #80bf40; }
 div.panel.statusPanel.warning .status:after { content: '\25BC'; color: #bf9f40; }
